Fix footer cutoff by allowing vertical scroll when content overflows

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ html {
     font-size: 16px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 body {
